--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+
+# JWT properties
+app.jwt-secret=JWTSecretKey
+app.jwt-expiration-milliseconds=20000
+#app.jwt-expiration-milliseconds=604800000
