testing the shopping cart controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/final_project_applaudo
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update 
+#none
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
 
 # JWT properties
