--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,33 @@
 			<version>0.9.1</version>
 		</dependency>
 		
+		<dependency> 
+		    <groupId>org.jmockit</groupId> 
+		    <artifactId>jmockit</artifactId> 
+		    <version>1.49</version>
+		    <scope>test</scope>
+		</dependency>
+		
+	
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+		    <artifactId>junit-vintage-engine</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>4.8.0</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest</artifactId>
+		    <version>2.2</version>
+		    <scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
