--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-inline</artifactId>
+		    <version>4.8.0</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
 		    <groupId>org.hamcrest</groupId>
 		    <artifactId>hamcrest</artifactId>
 		    <version>2.2</version>
